# sddraft

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  README.md  SPEC.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: EXTENDING.md  HISTORY_DOCS.md  USAGE.md
examples/: csc_nav_ctrl.yaml  csc_sddraft.yaml  project.yaml  project_ollama.yaml  sdd_target_core.yaml
src/engllm/: __init__.py  __main__.py
src/engllm/cli/: main.py
src/engllm/core/: __init__.py  hierarchy_docs.py  tooling.py  workspaces.py
src/engllm/core/analysis/: commit_impact.py  dependency_resolution.py  evidence_builder.py  graph_build.py  graph_index.py  graph_models.py  graph_retrieval.py  hierarchy.py  history.py  intensive_corpus.py  metrics.py  retrieval.py  symbol_inventory.py
src/engllm/core/config/: loader.py
src/engllm/core/render/: __init__.py  hierarchy.py  json_artifacts.py
src/engllm/core/repo/: __init__.py  diff_parser.py  history.py  language_analyzers.py  scanner.py
src/engllm/domain/: __init__.py  errors.py  models.py
src/engllm/integrations/: __init__.py  base.py
src/engllm/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  grok.py  mock.py  ollama.py  openai.py
src/engllm/prompts/: __init__.py
src/engllm/prompts/ask/: __init__.py  builders.py  templates.py
src/engllm/prompts/core/: __init__.py  builders.py  templates.py
src/engllm/prompts/history_docs/: __init__.py  builders.py  templates.py
src/engllm/prompts/sdd/: __init__.py  builders.py  templates.py
src/engllm/tools/: __init__.py
src/engllm/tools/ask/: __init__.py  ask.py  intensive.py  models.py  render.py
src/engllm/tools/history_docs/: __init__.py  algorithm_capsule_enrichment.py  algorithm_capsules.py  benchmark.py  build.py  checkpoint_model.py  checkpoint_model_enrichment.py  delta.py  dependencies.py  dependency_landscape.py  dependency_narratives_shadow.py  draft_review.py  h13_evidence.py  interface_inventory.py  interval_interpretation.py  models.py  real_benchmark.py  render.py  section_drafting_llm.py  section_outline.py  section_planning_llm.py  section_repair_llm.py  semantic_context.py  semantic_planner.py  semantic_structure.py  structure.py  validation.py
src/engllm/tools/repo/: __init__.py  inspect_diff.py
src/engllm/tools/sdd/: __init__.py  generate.py  markdown.py  models.py  propose_updates.py  render.py
src/sddraft/: __init__.py  __main__.py
src/sddraft/analysis/: __init__.py  commit_impact.py  dependency_resolution.py  evidence_builder.py  graph_build.py  graph_index.py  graph_models.py  graph_retrieval.py  hierarchy.py  intensive_corpus.py  metrics.py  retrieval.py  symbol_inventory.py
src/sddraft/cli/: main.py
src/sddraft/config/: __init__.py  loader.py
src/sddraft/domain/: __init__.py  errors.py  models.py
src/sddraft/llm/: __init__.py  base.py  factory.py  gemini.py  mock.py  ollama.py
src/sddraft/prompts/: __init__.py  builders.py  templates.py
src/sddraft/render/: __init__.py  hierarchy.py  json_artifacts.py  markdown.py  reports.py
src/sddraft/repo/: __init__.py  diff_parser.py  language_analyzers.py  scanner.py
src/sddraft/workflows/: __init__.py  ask.py  generate.py  hierarchy_docs.py  inspect_diff.py  intensive_ask.py  propose_updates.py
templates/: sdd_default.yaml
tests/: __init__.py  conftest.py  history_docs_helpers.py  test_cli.py  test_cli_acceptance_v1.py  test_cli_additional.py  test_commit_impact_extra.py  test_config_loader.py  test_dependency_resolution.py  test_diff_and_impact.py  test_domain_models_validators.py  test_graph_build_and_retrieval.py  test_graph_build_incremental_helpers.py  test_graph_index_and_candidate_sources.py  test_hierarchy_analysis.py  test_history_docs_h1.py  test_history_docs_h10.py  test_history_docs_h11.py  test_history_docs_h11_02.py  test_history_docs_h11_03.py  test_history_docs_h12_01.py  test_history_docs_h12_02.py  test_history_docs_h12_03.py  test_history_docs_h13.py  test_history_docs_h14.py  test_history_docs_h2.py  test_history_docs_h3.py  test_history_docs_h4.py  test_history_docs_h5.py  test_history_docs_h6.py  test_history_docs_h7.py  test_history_docs_h8.py  test_history_docs_h9.py  test_history_docs_real_benchmark.py  test_imports.py  test_intensive_corpus.py  test_language_analyzers.py  test_layer_boundaries.py  test_llm_components.py  test_render_and_workflow_misc.py  (+6 more)
